Finish off specific Transaction detail documentation.
